# BioFitIQ

./: README.md
Backend/: main.py  pyproject.toml  render.yaml  requirements.txt
Backend/LLM/: llm.py
Backend/app/utils/: parsing.py
Backend/routes/: equipment.py  exercise.py  muscle.py
Frontend/: index.html  package-lock.json  package.json  vite.config.js
Frontend/src/: App.jsx  index.css
Frontend/src/components/: Footer.jsx  Navbar.jsx  SearchBar.jsx
Frontend/src/pages/: Home.jsx  MidSection.jsx
